@@ -64,7 +64,13 @@ xine-lib (1.1.90) (Unreleased)
   * Report more video output capabilities via (port)->get_capabilities():
     colour controls, zooming, colour keying.
 
-xine-lib (1.1.13) 2008-??-??
+xine-lib (1.1.12.1) 2008-??-??
+  * Security fixes:
+    - Buffer overflow in the NSF demuxer which may allow remote attackers to
+      cause a denial of service (crash) or possibly execute arbitrary code
+      via an NSF file with a long title or copyright message. (CVE-2008-1878)
+    - For extra safety against possible Integer overflows like the ones found
+      in CVE-2008-1482, backport more calloc usage from 1.2 branch.
 
 xine-lib (1.1.12) 2008-04-14
   * Security fixes:
